# cphandbook

./: .clang-format  .clangd  .editorconfig  .gitignore  README.md  ancestor.cpp  backtrack.cpp  binary_search.cpp  bits.cpp  coins.cpp  data_structures.cpp  deadlines.cpp  elevator.cpp  fenwick_tree.cpp  float.cpp  graph_dp.cpp  graph_traversal.cpp  grid_paths.cpp  input.cpp  knapsack.cpp  kruskal.cpp  lines.cpp  lis.cpp  longest_paths.cpp  lorem.text  lowerbound.cpp  lsb.cpp  max_customers.cpp  meson.build  modulo.cpp  permutation.cpp  prim.cpp  segment_tree.cpp  shortest_path.cpp  subset.cpp  successor_graphs.cpp  topsort.cpp  tree_diameter.cpp  tree_queries.cpp
cses/: 1069_repetitions.cpp  1070_permutations.cpp  1071_number_spiral.cpp  1072_two_knights.cpp  1073_towers.cpp  1083_missing_number.cpp  1084_apartments.cpp  1090_ferris_wheel.cpp  1091_concert_tickets.cpp  1092_two_sets.cpp  1094_increasing_array.cpp  1131_tree_diameter.cpp  1137_subtree_queries.cpp  1158_book_shop.cpp  1192_counting_rooms.cpp  1193_labyrinth.cpp  1194_monsters.cpp  1617_bit_strings.cpp  1619_restaurant.cpp  1621_distinct_numbers.cpp  1629_movie_festival.cpp  1630_tasks_and_deadlines.cpp  1635_coin_combinations.cpp  1637_removing_digits.cpp  1638_grid_paths1.cpp  1640_sum_of_two.cpp  1643_max_subarray_sum.cpp  1645_nearest_smaller_values.cpp  1646_static_range_sum_queries.cpp  1647_static_range_min_queries.cpp  1648_dyna_range_sum_queries.cpp  1649_dyna_range_min_queries.cpp  1653_elevator.cpp  1660_subarray_sums.cpp  1666_building_roads.cpp  1667_message_route.cpp  1668_building_teams.cpp  1669_round_trip.cpp  1671_shortest_routes1.cpp  1674_subordinates.cpp  (+9 more)
