project(
    'handbook',
    'cpp',
    version: '0.1.0',
    default_options: [
        'cpp_std=c++11',
        'optimization=2',
        'warning_level=3',
        'debug=true',
    ],
)

executable('input', ['input.cpp'])
executable('lines', ['lines.cpp'])
executable('modulo', ['modulo.cpp'])
executable('float', ['float.cpp'])
executable('subset', ['subset.cpp'])
executable('permutation', ['permutation.cpp'])
executable('backtrack', ['backtrack.cpp'])
executable('bits', ['bits.cpp'])
executable('binary_search', ['binary_search.cpp'])
executable('max_customers', ['max_customers.cpp'])
executable('deadlines', ['deadlines.cpp'])
executable('data_structures', ['data_structures.cpp'])
executable('lowerbound', ['lowerbound.cpp'])

# cses
executable('1643_max_subarray_sum', ['cses/1643_max_subarray_sum.cpp'])
executable('1072_two_knights', ['cses/1072_two_knights.cpp'])
executable('1094_increasing_array', ['cses/1094_increasing_array.cpp'])
executable('1083_missing_number', ['cses/1083_missing_number.cpp'])
executable('1069_repetitions', ['cses/1069_repetitions.cpp'])
executable('1070_permutations', ['cses/1070_permutations.cpp'])
executable('1071_number_spiral', ['cses/1071_number_spiral.cpp'])
executable('1092_two_sets', ['cses/1092_two_sets.cpp'])
executable('1617_bit_strings', ['cses/1617_bit_strings.cpp'])
executable('1621_distinct_numbers', ['cses/1621_distinct_numbers.cpp'])
executable('1084_apartments', ['cses/1084_apartments.cpp'])
executable('1090_ferris_wheel', ['cses/1090_ferris_wheel.cpp'])
executable('1091_concert_tickets', ['cses/1091_concert_tickets.cpp'])
executable('1619_restaurant', ['cses/1619_restaurant.cpp'])
executable('1629_movie_festival', ['cses/1629_movie_festival.cpp'])
