project(
    'handbook',
    'cpp',
    version: '0.1.0',
    default_options: [
        'cpp_std=c++11',
        'optimization=2',
        'warning_level=3',
        'debug=true',
    ],
)

executable('input', ['input.cpp'])
executable('lines', ['lines.cpp'])
executable('modulo', ['modulo.cpp'])
executable('float', ['float.cpp'])
executable('subset', ['subset.cpp'])
executable('permutation', ['permutation.cpp'])
executable('backtrack', ['backtrack.cpp'])
executable('bits', ['bits.cpp'])
executable('binary_search', ['binary_search.cpp'])
executable('max_customers', ['max_customers.cpp'])
executable('deadlines', ['deadlines.cpp'])
executable('data_structures', ['data_structures.cpp'])
executable('lowerbound', ['lowerbound.cpp'])
executable('coins', ['coins.cpp'])
executable('lis', ['lis.cpp'])
executable('grid_paths', ['grid_paths.cpp'])
executable('knapsack', ['knapsack.cpp'])
executable('elevator', ['elevator.cpp'])

# cses
executable('1643_max_subarray_sum', ['cses/1643_max_subarray_sum.cpp'])
executable('1072_two_knights', ['cses/1072_two_knights.cpp'])
executable('1094_increasing_array', ['cses/1094_increasing_array.cpp'])
executable('1083_missing_number', ['cses/1083_missing_number.cpp'])
executable('1069_repetitions', ['cses/1069_repetitions.cpp'])
executable('1070_permutations', ['cses/1070_permutations.cpp'])
executable('1071_number_spiral', ['cses/1071_number_spiral.cpp'])
executable('1092_two_sets', ['cses/1092_two_sets.cpp'])
executable('1617_bit_strings', ['cses/1617_bit_strings.cpp'])
executable('1621_distinct_numbers', ['cses/1621_distinct_numbers.cpp'])
executable('1084_apartments', ['cses/1084_apartments.cpp'])
executable('1090_ferris_wheel', ['cses/1090_ferris_wheel.cpp'])
executable('1091_concert_tickets', ['cses/1091_concert_tickets.cpp'])
executable('1619_restaurant', ['cses/1619_restaurant.cpp'])
executable('1629_movie_festival', ['cses/1629_movie_festival.cpp'])
executable('1640_sum_of_two', ['cses/1640_sum_of_two.cpp'])
executable('1073_towers', ['cses/1073_towers.cpp'])
executable('1630_tasks_and_deadlines', ['cses/1630_tasks_and_deadlines.cpp'])
executable('1635_coin_combinations', ['cses/1635_coin_combinations.cpp'])
executable('1638_grid_paths1', ['cses/1638_grid_paths1.cpp'])
executable('1158_book_shop', ['cses/1158_book_shop.cpp'])
executable('1653_elevator', ['cses/1653_elevator.cpp'])
executable('1746_array_desc', ['cses/1746_array_desc.cpp'])
executable('1637_removing_digits', ['cses/1637_removing_digits.cpp'])
executable('1745_money_sums', ['cses/1745_money_sums.cpp'])
