project(
    'cphandbook',
    'cpp',
    version: '0.1.0',
    default_options: [
        'cpp_std=c++11',
        'optimization=2',
        'warning_level=3',
        'debug=true',
    ],
)

executable('input', ['input.cpp'])
executable('lines', ['lines.cpp'])
executable('modulo', ['modulo.cpp'])
executable('float', ['float.cpp'])
executable('subset', ['subset.cpp'])
executable('permutation', ['permutation.cpp'])
executable('backtrack', ['backtrack.cpp'])
executable('bits', ['bits.cpp'])
executable('binary_search', ['binary_search.cpp'])
executable('max_customers', ['max_customers.cpp'])
executable('deadlines', ['deadlines.cpp'])
executable('data_structures', ['data_structures.cpp'])
executable('lowerbound', ['lowerbound.cpp'])
executable('coins', ['coins.cpp'])
executable('lis', ['lis.cpp'])
executable('grid_paths', ['grid_paths.cpp'])
executable('knapsack', ['knapsack.cpp'])
executable('elevator', ['elevator.cpp'])
executable('graph_traversal', ['graph_traversal.cpp'])
executable('shortest_path', ['shortest_path.cpp'])
executable('topsort', ['topsort.cpp'])
executable('graph_dp', ['graph_dp.cpp'])
executable('successor_graphs', ['successor_graphs.cpp'])
executable('kruskal', ['kruskal.cpp'])
executable('prim', ['prim.cpp'])
executable('fenwick_tree', ['fenwick_tree.cpp'])
executable('lsb', ['lsb.cpp'])
executable('segment_tree', ['segment_tree.cpp'])
