project(
    'cses',
    'cpp',
    version: '0.1.0',
    default_options: [
        'cpp_std=c++11',
        'optimization=2',
        'warning_level=3',
        'debug=true',
    ],
)

# cses
executable('1643_max_subarray_sum', ['1643_max_subarray_sum.cpp'])
executable('1072_two_knights', ['1072_two_knights.cpp'])
executable('1094_increasing_array', ['1094_increasing_array.cpp'])
executable('1083_missing_number', ['1083_missing_number.cpp'])
executable('1069_repetitions', ['1069_repetitions.cpp'])
executable('1070_permutations', ['1070_permutations.cpp'])
executable('1071_number_spiral', ['1071_number_spiral.cpp'])
executable('1092_two_sets', ['1092_two_sets.cpp'])
executable('1617_bit_strings', ['1617_bit_strings.cpp'])
executable('1621_distinct_numbers', ['1621_distinct_numbers.cpp'])
executable('1084_apartments', ['1084_apartments.cpp'])
executable('1090_ferris_wheel', ['1090_ferris_wheel.cpp'])
executable('1091_concert_tickets', ['1091_concert_tickets.cpp'])
executable('1619_restaurant', ['1619_restaurant.cpp'])
executable('1629_movie_festival', ['1629_movie_festival.cpp'])
executable('1640_sum_of_two', ['1640_sum_of_two.cpp'])
executable('1073_towers', ['1073_towers.cpp'])
executable('1630_tasks_and_deadlines', ['1630_tasks_and_deadlines.cpp'])
executable('1635_coin_combinations', ['1635_coin_combinations.cpp'])
executable('1638_grid_paths1', ['1638_grid_paths1.cpp'])
executable('1158_book_shop', ['1158_book_shop.cpp'])
executable('1653_elevator', ['1653_elevator.cpp'])
executable('1746_array_desc', ['1746_array_desc.cpp'])
executable('1637_removing_digits', ['1637_removing_digits.cpp'])
executable('1745_money_sums', ['1745_money_sums.cpp'])
executable('1192_counting_rooms', ['1192_counting_rooms.cpp'])
executable('1193_labyrinth', ['1193_labyrinth.cpp'])
executable('1666_building_roads', ['1666_building_roads.cpp'])
executable('1668_building_teams', ['1668_building_teams.cpp'])
executable('1667_message_route', ['1667_message_route.cpp'])
executable('1669_round_trip', ['1669_round_trip.cpp'])
executable('1676_road_construction', ['1676_road_construction.cpp'])
executable('1194_monsters', ['1194_monsters.cpp'])
executable('1671_shortest_routes1', ['1671_shortest_routes1.cpp'])
